Text overflow fix, experience search modified

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -83,6 +83,9 @@
     float: left;
     border: solid 1px #888888;
     position: initial;
+    * {
+        text-overflow: ellipsis;
+    }
     &:hover {
         box-shadow: 0px 0px 8px #000000;
         border: solid 2px #b808ee;
